# Apache-Spark-com-Delta-Lake-e-Apache-Iceberg

./: README.md  main.py  mkdocs.yml  pyproject.toml  spark-delta.ipynb  spark-iceberg.py  spark_delta.ipynb  spark_iceberg.ipynb
docs/: delta.md  iceberg.md  index.md
spark-warehouse/filmes_delta.db/top_filmes/: .part-00000-6c06fbd8-79dd-477f-a911-0d52beb76e7d-c000.snappy.parquet.crc  .part-00000-87d95c8a-94ca-4f5b-9635-bb52a24029fc-c000.snappy.parquet.crc  .part-00000-b3d2f17e-8fbc-40e5-84c4-abb7bb19b68e-c000.snappy.parquet.crc  .part-00000-f9ce8ad9-2378-47f4-af5e-6a875639ebfc-c000.snappy.parquet.crc  part-00000-6c06fbd8-79dd-477f-a911-0d52beb76e7d-c000.snappy.parquet  part-00000-87d95c8a-94ca-4f5b-9635-bb52a24029fc-c000.snappy.parquet  part-00000-b3d2f17e-8fbc-40e5-84c4-abb7bb19b68e-c000.snappy.parquet  part-00000-f9ce8ad9-2378-47f4-af5e-6a875639ebfc-c000.snappy.parquet
spark-warehouse/filmes_delta.db/top_filmes/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.json.crc  .00000000000000000004.json.crc
warehouse_path/filmes/top100/data/: .00000-10-e685962c-283a-4eb5-ad8f-e0c4e58d6ed1-0-00001.parquet.crc  .00000-14-4a7d28f9-e832-4ad9-a1cd-7f4785c8a438-0-00001.parquet.crc  .00000-2-206dfa2e-a80e-40a2-b8e0-6e4ec48c7ce5-0-00001.parquet.crc  .00000-2-818922c0-5e42-46ce-99f6-09e8d90b5d26-0-00001.parquet.crc  .00000-20-9cc66554-f625-4646-9b91-95db98b81891-0-00001.parquet.crc  .00000-8-d038a7f2-6ae5-4b01-87d8-da85d165c1e6-0-00001.parquet.crc  (+10 more)
(+130 files in other folders)
