[project]
name = "apache-spark-delta-lake-apache-iceberg"
version = "0.1.0"
description = "Apache Spark com Delta Lake e Apache Iceberg"
authors = [
    {name = "Joao Acordi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (==3.5.0)",
    "delta-spark (==3.2.0)",
    "jupyterlab (>=4.4.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
